--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+	<nav>
+		<ul>
+		<li><a href="#Home">Home</a></li>
+		<li><a href="#About us">About us</a></li>
+		<li><a href="#Contact us">Contact us</a></li>
+		</ul>
+	</nav>
+		<h2>3 random videos</h2>
+	 <section>
+        <video controls>
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
